# aeroramp-vision

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1dd6c0f19eba_add_edge_sync_batches.py  67a20ecf2d25_initial_schema.py  85ff9f8e896d_add_incident_notes.py  ec07fad70414_add_model_deployments.py
apps/edge_agent/: agent.py
apps/inference/: main.py
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  (+2 more)
apps/worker/: main.py
configs/training/: dataset.example.yaml
data/: NOTICE.md
docs/: DATASET.md  api-examples.md  architecture.md  aviation-limitations.md  camera-calibration.md  data-sources.md  deployment.md  edge-deployment.md  model-evaluation.md  model-training.md  privacy-and-retention.md  production-readiness.md  safety-rule-engine.md  security-model.md  tracking.md  turnaround-engine.md  verification.md  vision-pipeline.md
docs/screenshots/: README.md
infrastructure/: Dockerfile.api  Dockerfile.web
models/: README.md
sample-data/: dvids-age-public.json
scripts/: benchmark.py  download_public_dataset.py  evaluate_events.py  evaluate_yolo.py  export_yolo.py  generate_synthetic_video.py  register_model.py  retention_cleanup.py  seed.py  train_yolo.py
tests/: conftest.py
tests/integration/: test_api_workflow.py  test_auth_calibration.py  test_edge_sync.py  test_model_deployment.py
(+49 files in other folders)
