[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeroramp-vision"
version = "0.1.0"
description = "Airport turnaround and ramp-safety computer-vision platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-multipart>=0.0.9,<1",
  "PyJWT>=2.8,<3",
  "cryptography>=43,<47",
  "opencv-python-headless>=4.10,<5",
  "numpy>=2.0,<3",
  "shapely>=2.0,<3",
  "httpx>=0.27,<1",
  "prometheus-client>=0.20,<1",
  "psutil>=6,<8"
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1", "mypy>=1.14,<2"]
postgres = ["psycopg[binary]>=3.2,<4"]
redis = ["redis>=5,<7"]
yolo = ["ultralytics>=8.3,<9"]

[tool.setuptools]
package-dir = {"" = "apps/api"}

[tool.setuptools.packages.find]
where = ["apps/api"]

[tool.setuptools.package-data]
aeroramp = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = [".", "apps/api", "packages/sdk/python"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["apps/web", "storage", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
exclude = ["apps/web", "alembic"]

[[tool.mypy.overrides]]
module = ["cv2.*", "shapely.*", "jwt.*"]
ignore_missing_imports = true
